@@ -25,6 +25,7 @@
 - added `controller.href()` method
 - extended `HTMLParser` by adding selector for prefixes, example: `node.find('xsd:')`
 - fixed parsing attributes with the `_` character in the `HTMLParser`
+- fixed parsing unpair XML elements in the `HTMLParser`
 
 ========================
 0.0.5
